# proton-sidecar

./: .gitignore  install.sh  pyproject.toml
.github/workflows/: release.yml
Documentation/: Product-requirements.md  Tech-notes.md  Tech-spec.md  development-plan.md  manifest.md
apps/: _index.toml
apps/acc-connector/: LLM.md  README.md  install.py  manifest.toml
scripts/: build_index.py
sidecar/: __init__.py  cli.py  context.py  download.py  extract.py  hook.py  install.py  launch.py  manifest.py  registry.py  state.py  steam.py
sidecar/templates/: LLM.md.j2  README.md.j2  install.py.j2  manifest.toml.j2
tests/: test_cli.py  test_download.py  test_extract.py  test_hook.py  test_install.py  test_launch.py  test_manifest.py  test_state.py  test_steam.py
tests/fixtures/: minimal_manifest.toml
