[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proton-sidecar"
version = "0.1.0"
description = "Manage Windows companion apps for Proton games on Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "protontricks>=1.11",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
proton-sidecar = "sidecar.cli:main"
sidecar = "sidecar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]
artifacts = ["sidecar/templates/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sidecar --cov-report=term-missing"
